updating some small stuff with tailwin + assets to load images

--- a/templates/header.html
+++ b/templates/header.html
@@ -2,5 +2,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@800&family=Orelega+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/segment7" type="text/css"/>
+
     <title> {{ .Title }} </title>
+    <style>
+        .segmented_font{
+            font-family: 'Segment7Standard';
+        }  
+    
+        .mukta_font{
+            font-family: 'Mukta', sans-serif;
+        }
+
+        .orelega_font{
+            font-family: 'Orelega One', cursive;
+        }
+
+    </style>
 </head>
