code on improvements

--- a/templates/header.html
+++ b/templates/header.html
@@ -10,6 +10,16 @@
 
     <title> {{ .Title }} </title>
     <style>
+
+        @font-face {
+            font-family: "AldoTheApache";
+            src: url(public/fonts/AldotheApache.ttf) format("truetype");
+        }
+
+        .aldo_font{
+            font-family: 'AldoTheApache',Verdana,Monospace;
+        }
+
         .segmented_font{
             font-family: 'Segment7Standard';
         }  
