--- a/templates/index.html
+++ b/templates/index.html
@@ -18,11 +18,12 @@
             <p class="segmented_font text-center">
                 01100010 01110101 01111001 00100000 01100010 01101001 01110100 01100011 01101111 01101001 01101110
             </p>
-            <div class="px-12">
-                <h1> afa7789</h1>
-                <h2> Computer Engineer</h2>
-                <h3> Arthur Abeilice</h3>
-                <p> lorem ipsum </p>
+            <div class="md:px-12">
+                <h5 class="aldo_font -mb-3 ml-3"> afa7789 </h5>
+                <h1 class="text-4xl md:text-6xl mukta_font"> Computer Engineering Solutions
+                </h2>
+                <h2> Arthur Abeilice</h2>
+                <p>  lorem ipsum </p>
                 <div>
                     <button>call to action</button>
                 </div>
@@ -55,21 +56,21 @@
             </div>
         </section>
         <section class='my-8'>
-            <div class="mx-12"> 
+            <div class="mx-4 md:mx-12"> 
                 <h2 class="text-xl">CONTACT</h2>
-                <div class="flex ">
-                    <div class="w-3/6">
+                <div class="md:flex ">
+                    <div class="md:w-3/6">
                         <h3 class="text-lg text-zinc-700">
                             CONTACT US
                         </h3>
-                        <h1 class="text-6xl mukta_font ">
+                        <h1 class="text-5xl md:text-6xl mukta_font ">
                             Lets start your project
                         </h1>
                         <p class="text-zinc-700 text-lg mt-4">
                             Because they are hard, because that goal will serve to organize and measure the best of our energies and skills, because that challenge is one that we are willing to accept one we are.
                         </p>
                     </div>
-                    <form class="contact-form w-3/6 flex flex-col px-8 space-y-4" action=”mailto:afa7789@gmail.com”>
+                    <form class="contact-form md:w-3/6 flex flex-col mt-3 md:mt-0 md:px-8 space-y-4" action=”mailto:afa7789@gmail.com”>
                         <input id="name"
                             class="border-black border-solid border-b-4 w"
                             type="text" name="your-name" placeholder="Name">
@@ -91,13 +92,16 @@
             </div>
         </section>
     </main>
-    <footer>
-        <div>
-            <h4>
-                redes sociais
-            </h4>
+
+    <footer class="flex flex-col">
+        <div class="flex justify-center space-x-6 flex-wrap md:flex-nowrap ">         
+            <h4>Linkedin</h4>
+            <h4>Instagram</h4>
+            <h4>BlogPosts</h4>
+            <h4>Github</h4>
+            <h4>Spotify</h4>
         </div>
-        <div>
+        <div class="before:content-[''] before:mb-4 before:block before:border-solid before:border-b-2 before:border-black  mx-auto my-4">
             afa7789 Computer Engineering Solutions Ltda @ 2021
         </div>
     </footer>
