changes on the index page

--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -5,7 +5,7 @@
         </object>
     </div>
     <nav class="mx-8" id="options-header">
-        <button class="transition text-black text-lg hover:text-zinc-700 hover:text-xl"> ABOUT </button> 
-        <button class="transition text-black text-lg hover:text-zinc-700 hover:text-xl"> CONTACT </button>
+        <a class="transition text-black text-lg hover:text-zinc-700 hover:text-xl"  href="#about"> ABOUT </a> 
+        <a class="transition text-black text-lg hover:text-zinc-700 hover:text-xl"  href="#contact"> CONTACT </a>
     </nav>
 </header>
