--- a/web/templates/meta.html
+++ b/web/templates/meta.html
@@ -10,6 +10,13 @@
 
     <title> {{ .Title }} </title>
     <style>
+        html,body{
+            width: 100%;
+            height: 100%;
+            margin: 0px;
+            padding: 0px;
+            overflow-x: hidden; 
+        }
 
         @font-face {
             font-family: "AldoTheApache";
