--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -132,7 +132,7 @@
                         Development
                     </h3>
                     <p style="min-width: 180px; max-width: 330px;" class="italic">
-                        Development of newer features in afa7789 tech stack.
+                        Development of newer features in a newer tech stack.
                         Your project with the most recent tech,
                         best practices, and conventions.
                     </p>
@@ -142,11 +142,12 @@
                 <div>
                     <p class="service-num">2</p>
                     <h3 class="text-lg sm:text-xl md:text-2xl ">
-                        Code Migration
+                        Migrations and Integrations
                     </h3>
                     <p style="min-width: 180px; max-width: 330px;" class="italic">
-                        I can help your team migrate from old code to newer ones.
+                        Help your team migrate from old code to newer ones.
                         Maintaining the behavior of older features and their documentation.
+                        Or add new features and integrations such as web3 features or background services to a legacy code.
                     </p>
                 </div>
                 <!-- development -->
@@ -229,16 +230,18 @@
                             Remember we not only code check up our services part.
                         </p>
                     </div>
-                    <form class="contact-form md:w-3/6  flex flex-col mt-3 md:mt-14 md:px-8 space-y-4"
-                        action=”mailto:afa7789@gmail.com”>
-                        <input id="name" class="border-black border-solid border-b-4 w" type="text" name="your-name"
+                    <form
+                        method="post"
+                        class="contact-form md:w-3/6  flex flex-col mt-3 md:mt-14 md:px-8 space-y-4"
+                        action=”/mail”>
+                        <input id="name" class="border-black border-solid border-b-4 w" type="text" name="name"
                             placeholder="Name">
                         <input id="contact-email" class="border-black border-solid border-b-4" type="email"
                             name="your-email" placeholder="Email">
-                        <input id="subject" class="border-black border-solid border-b-4" type="text" name="your-subject"
+                        <input id="subject" class="border-black border-solid border-b-4" type="text" name="subject"
                             placeholder="Subject">
                         <textarea id="message" class="h-150 border-black border-solid border-b-4"
-                            name="your-message" value="" placeholder="Message"></textarea>
+                            name="message" value="" placeholder="Message"></textarea>
                         <input type="submit" value="SEND">
                     </form>
                 </div>
@@ -250,9 +253,6 @@
         <div class="flex justify-center space-x-6 flex-wrap md:flex-nowrap ">
             <a href="https://www.linkedin.com/in/arthur-abeilice/">
                 <h4>Linkedin</h4>
-            </a>
-            <a href="https://www.instagram.com/afabeilice/">
-                <h4>Instagram</h4>
             </a>
             <a href="https://afa7789.medium.com/">
                 <h4>BlogPosts</h4>
