--- a/web/templates/blog_editor.html
+++ b/web/templates/blog_editor.html
@@ -14,6 +14,14 @@
             </p>
         {{end}}
         <form>
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">
+                Title
+            </label>
+            <input type="text" placeholder="Title" value="{{.post_title}}">
+            <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2">
+                Title
+            </label>
+            <input type="text" placeholder="Title" value="{{.post_title}}">
         </form>
     </section>
 </body>
