--- a/web/templates/header.html
+++ b/web/templates/header.html
@@ -1,15 +1,14 @@
-
 {{if .SharedHeader }}
 <header class="w-screen flex flex-row items-center p-1 justify-between bg-white shadow-xs">
-    <div id="logo-header" class="ml-6">
-        <a href="/">
-            <object class="w-20" type="image/svg+xml" data="/public/images/logo.svg" alt="site logo">
-                <img src="/public/images/logo.png" alt="site logo">
-            </object>
-        </a>
+    <div id="logo-header" class="ml-6" href="/">
+        <object class="w-20" type="image/svg+xml" data="/public/images/logo.svg" alt="site logo">
+            <a href="/">
+            <img src="/public/images/logo.png" alt="site logo">
+            </a>    
+        </object>
     </div>
     <nav class="mx-8" id="options-header">
-        <a class="transition text-black text-lg hover:text-zinc-700 hover:text-xl"  href="/"> HOME </a> 
+        <a class="transition text-black text-lg hover:text-zinc-700 hover:text-xl" href="/"> HOME </a>
     </nav>
 </header>
 {{else}}
@@ -20,8 +19,8 @@
         </object>
     </div>
     <nav class="mx-8" id="options-header">
-        <a class="transition text-black text-lg hover:text-zinc-700 hover:text-xl"  href="#about"> ABOUT </a> 
-        <a class="transition text-black text-lg hover:text-zinc-700 hover:text-xl"  href="#contact"> CONTACT </a>
+        <a class="transition text-black text-lg hover:text-zinc-700 hover:text-xl" href="#about"> ABOUT </a>
+        <a class="transition text-black text-lg hover:text-zinc-700 hover:text-xl" href="#contact"> CONTACT </a>
     </nav>
 </header>
 {{end}}
