--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -246,7 +246,7 @@
                         <input id="name" class="outline-none border-black border-solid border-b-4 w" type="text" name="name"
                             placeholder="Name">
                         <input id="contact-email" class="outline-none border-black border-solid border-b-4" type="email"
-                            name="email" placeholder="Email">
+                            name="contact" placeholder="Email">
                         <input id="subject" class="outline-none border-black border-solid border-b-4" type="text"
                             name="subject" placeholder="Subject">
                         <textarea id="message" class="outline-none h-150 border-black border-solid border-b-4" name="message"
